# dog_deploy

./: .gitignore  README.md  deploy2real.sh
src/config/: policy.yaml  sensor.yaml
src/pkg/real/: CMakeLists.txt  package.xml
src/pkg/real/include/real/: imu.h  motor.h  real.h
src/pkg/real/src/: imu.cpp  motor.cpp  real.cpp  test.cpp
src/pkg/rl_controller/: CMakeLists.txt  package.xml
src/pkg/rl_controller/include/: Types_.h
src/pkg/rl_controller/include/rl_controller/: RLcontroller.h
src/pkg/rl_controller/launch/: deploy2real.launch.py
src/pkg/rl_controller/src/: controller.cpp
src/pkg/sensors/DM_IMU/: CMakeLists.txt  README.md  imu_viewer.py  package.xml
src/pkg/sensors/DM_IMU/src/: crc16.cpp  crc16.h  imu_parser.cpp  imu_parser.h  serial_port.cpp  serial_port.h
src/pkg/sensors/gamepad/: CMakeLists.txt  package.xml
src/pkg/sensors/gamepad/include/gamepad/: gamepad.h
src/pkg/sensors/gamepad/src/: gamepad.cpp
src/pkg/sensors/motors/: CMakeLists.txt  package.xml
src/pkg/sensors/motors/include/: motor_driver.hpp
src/pkg/sensors/motors/src/: motor_driver.cpp  pybind_module.cpp  utils.hpp
src/pkg/sensors/motors/src/drivers/: CMakeLists.txt
src/pkg/sensors/motors/src/drivers/lro/: CMakeLists.txt  lro_motor_driver.cpp  lro_motor_driver_can.cpp  lro_motor_driver_can.hpp
src/pkg/sensors/motors/src/protocol/: can_iso.hpp  canfd_iso.hpp  ethercat_iso.hpp
src/pkg/sensors/motors/src/protocol/can/: socket_can.cpp  socket_can.hpp
src/pkg/sensors/motors/src/protocol/canfd/: socket_canfd.cpp
