cmake_minimum_required(VERSION 3.8)
project(rl_controller)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(Eigen3 3.3 REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(std_msgs REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)


###############
###  build  ###
###############
file(GLOB SRC src/*.cpp)
add_executable(${PROJECT_NAME} ${SRC})
 
set(ONNXRUNTIME_DIR ${CMAKE_SOURCE_DIR}/../../3rdparty/onnxruntime)
target_include_directories(${PROJECT_NAME} 
    PRIVATE
        include    
        ${ONNXRUNTIME_DIR}/include
        ${EIGEN3_INCLUDE_DIRS}
)
target_link_directories(${PROJECT_NAME} 
    PRIVATE
        ${ONNXRUNTIME_DIR}/lib
)
target_link_libraries(${PROJECT_NAME} 
        onnxruntime
        yaml-cpp
)

ament_target_dependencies(${PROJECT_NAME} 
    rclcpp
    std_msgs
    Eigen3
)

target_compile_definitions(${PROJECT_NAME} 
    PRIVATE
        MODEL_PATH="${CMAKE_SOURCE_DIR}/../../policy"
        CONFIG_PATH="${CMAKE_SOURCE_DIR}/../../config"
        LOG_PATH="${CMAKE_SOURCE_DIR}/../../../"
)


###############
##  Install  ##
###############
install(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION lib/${PROJECT_NAME}/
)

install(DIRECTORY include/
    INCLUDES DESTINATION include/
    FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
)
ament_export_include_directories(include)

install(DIRECTORY launch
    DESTINATION share/${PROJECT_NAME}/
)

set_target_properties(${PROJECT_NAME} PROPERTIES
    INSTALL_RPATH "${ONNXRUNTIME_DIR}/lib/"
    BUILD_WITH_INSTALL_RPATH TRUE
)


if(BUILD_TESTING)
    find_package(ament_lint_auto REQUIRED)
    # the following line skips the linter which checks for copyrights
    # comment the line when a copyright and license is added to all source files
    set(ament_cmake_copyright_FOUND TRUE)
    # the following line skips cpplint (only works in a git repo)
    # comment the line when this package is in a git repo and when
    # a copyright and license is added to all source files
    set(ament_cmake_cpplint_FOUND TRUE)
    ament_lint_auto_find_test_dependencies()
endif()


ament_package()
